# NRF_RTIC

./: .gitignore  README.md
board/: Cargo.toml
board/src/: board_uart.rs  board_uarte.rs  device.rs  lib.rs  lib_can.rs  lib_dma.rs  lib_gpiote.rs  lib_nfc.rs  lib_uart.rs  lib_uarte.rs
board/src/device/: lib_dma.rs  lib_gpio.rs  lib_gpiote.rs  lib_i2c.rs  lib_nfc.rs  lib_uart.rs  lib_uarte.rs
code/: Cargo.toml
code/.cargo/: config.toml
code/src/: main.rs
