[package]
name = "board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cortex-m-rt = "0.7.1"
#cortex-m = "0.7.4"
nrf52840-hal = "0.15.0"
embedded-hal = "0.2.7"
volatile-register = "0.2.1" 



#rtt-target = { version = "0.3.1", features = ["cortex-m"] }
#panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
defmt = "0.3.0"
#defmt-rtt = "0.3.1"