[package]
name = "nrf_rtic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"

defmt = "0.3.0"
defmt-rtt = "0.3.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

board = { path = "../board"}

# Temporary, general purpose - two below are more correct
#fugit = "0.3.3"
#rtic-monotonic = "1.0.0"

[dependencies.nrf52840-hal]
version = "0.15.0"
default-features = false
features = ["rt"]

## think about understanding this 
[profile.dev]
debug = 2
overflow-checks = true

[profile.release]
debug = 2
overflow-checks = true