[package]
name = "nrf_rtic"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m-rtic = "1.1.2"
systick-monotonic = "1.0.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
board = { path = "../board"}

defmt = "0.3.2"
defmt-rtt = "0.3.2"


# Temporary, general purpose - two below are more correct
#fugit = "0.3.3"
#rtic-monotonic = "1.0.0"

[dependencies.nrf52840-hal]
version = "0.15.1"
default-features = false
features = ["rt"]

## think about understanding this 
[profile.dev]
debug = 2
overflow-checks = true

[profile.release]
debug = 2
overflow-checks = true